# CPP-Lab_3rd-Sem

./: README.md
Banking/: Banking_System.cpp
SCMS-1/: CMakeLists.txt  README.md  SCMS_structure.txt
SCMS-1/data/: courses.txt  users.txt
SCMS-1/include/: admin.h  course.h  courseManager.h  logger.h  person.h  teacher.h
SCMS-1/src/: admin.cpp  authManager.cpp  course.cpp  courseManager.cpp  logger.cpp  main.cpp  teacher.cpp
SCMS-2/: CMakeLists.txt
SCMS-2/data/: courses.txt  users.txt
SCMS-2/include/: attendence.h  attendenceManager.h  authManager.h  book.h  exam.h  examManager.h  libraryManager.h  marks.h  person.h  student.h
SCMS-2/src/: LibraryManager.cpp  attendence.cpp  attendenceManager.cpp  book.cpp  exam.cpp  examManager.cpp  main.cpp  marks.cpp  person.cpp  student.cpp
Set-1/: S1_p7.c
Set-4/: S4_p10.cpp
